# VideoImprovement

./: .gitignore  README.md  pyproject.toml
conf/base/: parameters_de.yml  parameters_ds.yml
src/tests/pipelines/de/: test_pipeline.py
src/tests/pipelines/ds/: test_pipeline.py
src/video_improvement/: __init__.py  __main__.py
src/video_improvement/pipelines/de/: __init__.py  nodes.py  pipeline.py
src/video_improvement/pipelines/ds/: __init__.py  nodes.py  pipeline.py
