[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "video_improvement"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
video-improvement = "video_improvement.__main__:main"

[tool.kedro]
package_name = "video_improvement"
project_name = "video_improvement"
kedro_init_version = "0.19.3"
tools = [ "Data Structure", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "video_improvement.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
